force-app/main/default/objects/Account/fields/abd_Account_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>abd_Account_Email_Address__c</fullName>
    <label>Account Email Address</label>
    <type>Email</type>
</CustomField>