force-app/main/default/objects/Account/fields/abd_Census__c.field-meta.xml
<CustomField>
    <fullName>abd_Census__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Census</label>
    <referenceTo>abd_Census__c</referenceTo>
    <relationshipLabel>Local Authorities</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>