force-app/main/default/objects/Account/fields/abd_Corporate_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>abd_Corporate_ID_Number__c</fullName>
    <inlineHelpText>Business number assigned by Secretary of State of Iowa</inlineHelpText>
    <label>Business ID Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>