force-app/main/default/objects/Account/fields/abd_Population__c.field-meta.xml
<CustomField>
    <fullName>abd_Population__c</fullName>
    <formula>abd_Census__r.abd_Population__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Population</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>