force-app/main/default/objects/Account/fields/abd_Verified_Active_in_Iowa__c.field-meta.xml
<CustomField>
    <fullName>abd_Verified_Active_in_Iowa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verified Active in Iowa</label>
    <type>Checkbox</type>
</CustomField>