force-app/main/default/objects/Account/fields/BGBK__Total_Balance__c.field-meta.xml
<CustomField>
    <fullName>BGBK__Total_Balance__c</fullName>
    <label>Total Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>