force-app/main/default/objects/Account/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Liability Company</fullName>
            </value>
            <value>
                <fullName>Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Municipality</fullName>
            </value>
            <value>
                <fullName>Non-profit Association</fullName>
            </value>
            <value>
                <fullName>Privately-Held Corporation</fullName>
            </value>
            <value>
                <fullName>Publicly Traded Corporation</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Foreign corporation as defined in section 504.141</fullName>
                <isActive>false</isActive>
                <label>Foreign corporation as defined in section 504.141</label>
            </value>
            <value>
                <fullName>Nonprofit corporation organized under chapter 504</fullName>
                <isActive>false</isActive>
                <label>Nonprofit corporation organized under chapter 504</label>
            </value>
            <value>
                <fullName>Nonprofit entity which has a principal office in the State of Iowa</fullName>
                <isActive>false</isActive>
                <label>Nonprofit entity which has a principal office in the State of Iowa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>