force-app/main/default/objects/Account/fields/Legacy_City_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_City_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy City Id</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>