force-app/main/default/objects/Account/fields/LocalAuthorityIsState__c.field-meta.xml
<CustomField>
    <fullName>LocalAuthorityIsState__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LocalAuthorityIsState</label>
    <type>Checkbox</type>
</CustomField>