force-app/main/default/objects/Account/fields/MUSW__Primary_License_Expiry__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Primary_License_Expiry__c</fullName>
    <label>Primary License Expiry</label>
    <type>Date</type>
</CustomField>