force-app/main/default/objects/Account/listViews/Dram_Shops.listView-meta.xml
<ListView>
    <fullName>Dram_Shops</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>DRAM shop</value>
    </filters>
    <label>Dram Shops</label>
</ListView>