force-app/main/default/objects/Account/listViews/Licensee_Accounts.listView-meta.xml
<ListView>
    <fullName>Licensee_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>abd_Business_Operations__c</columns>
    <columns>abd_Corporate_ID_Number__c</columns>
    <columns>abd_County__c</columns>
    <columns>Business_Type__c</columns>
    <columns>abd_DBA__c</columns>
    <columns>MUSW__Primary_Tracking_Number__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Licensee</value>
    </filters>
    <label>Licensee Accounts</label>
</ListView>