force-app/main/default/objects/Account/listViews/Local_Authority.listView-meta.xml
<ListView>
    <fullName>Local_Authority</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>abd_County__c</columns>
    <columns>County_Id__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Legacy_City_Id__c</columns>
    <columns>abd_Population__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Local Authority</value>
    </filters>
    <label>Local Authority</label>
</ListView>